# automation

./: .gitignore  AGENTS.md  README.md  flake.nix  pyproject.toml  skills-lock.json
runs/detect/models/translate/: args.yaml  results.csv
src/: simulation.py  smart_mower.py  v2.py
src/algo/: boustrophedon_path.py  cstar_controller.py  estar_controller.py  flood_fill_with_map.py  robot_env_nolimit.py  run_cstar.py  run_estar.py
src/algo/cstar/: 2505.13782v3.md
src/algo/estar/: CoveragePlanning_Prepublicationcopy.md
src/algo/sstc/: new.py  original.py
src/cleanrl/: agent.py  train.py  visualize.py
src/reinforce/: robot_env.py  train.py  visualize.py
src/rl/: architectures.py
src/rl/env/: __init__.py  config.py  renderer.py  utils.py
src/sb3/: debug_obs.py  debug_phases.py  robot_env.py  teleop_debug.py  train.py  visualize.py
src/translate/: INSTRUCTIONS.md  __init__.py  config.py  demo.py  detect.py  download_dataset.py  planner.py  train.py  visualize.py
src/v2/: architectures.py  debug_obs.py  robot_env.py  teleop_debug.py  train.py  visualize.py
src/v3/: architectures.py  robot_env.py  teleop_debug.py  train.py  utils.py  visualize.py
src/v3/env/: __init__.py  collision.py  config.py  field_generator.py  maps.py  sensors.py  transforms.py
